<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="connect_to_wifi_device">Connect to NodeMCU</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="sensor">Sensor</string>
    <string name="tick_mark_scan">tick_mark_scan</string>
    <string name="tick_mark_connected">tick_mark_connected</string>
    <string name="scan_failure_image">scan failure image</string>
    <string name="connection_failed_image">connection_failed_image</string>
    <string name="motor_on_off">Motor ON/OFF</string>
    <string name="sensor_status_failure">Sensor status failure</string>
    <string name="sensro_status_success">Sensro status success</string>
</resources>